@@ -1,3 +1,4 @@
+* Dialer (ECCP): new ECCP diagnostic script getagentstatusloop.php
 * Agent Console: fix typo that caused web console to refresh the agent status
   twice on agent link.
 * Dialer: discard AMI events for which there are no handlers upon reception. Also
